<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">POSKI mobiilisovellus</string>
    <string name="app_name">Poski</string>
    <string name="message_splashscreen">POSKI</string>
    <string name="test_2">Aloita peli</string>
    <string name="content_desc">Content description</string>
    <string name="colorball_value">0</string>
    <string name="total_txt">Yhteensä</string>
    <string name="bt_status">BT-status: </string>
    <string name="action_settings">Info</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices#8230;</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="pairing_message">After pairing, press menu and connect.</string>
    <string name="wait_till_bt_on">Turning Bluetooth on (to connect to your robot)</string>
    <string name="bt_off_message">Bluetooth turned off. See you later!</string>
    <string name="random">Random</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">Group 7: Ville Kerminen, Ilari Raijas, Henrik Raitasola, Jesper Skand. Android app made for Ammatillisesti suuntaava projekti @ 2014</string>
     <string name="cbox">Äänet päällä</string>   

</resources>